--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       target: development
     volumes:
       - .:/usr/src/app
-      - ./usr/src/app/node_modules
+      - .:/usr/src/app/node_modules
     env_file:
       - .env
     # Run a command against the development stage of the image
