#4 Adiciona um service database com postgres no docker-compose, além do Adminer.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# postgres|mysql
+DATABASE=postgres
+
 DATABASE_PORT=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
+
+# API
 PORT=
+
+#ADMINER
+ADMINER_PORT=
