--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,15 @@ services:
     ports:
       - ${PORT}:3000
     depends_on:
-      - database
+      - database-${DATABASE}
 
-  database:
+  database-mysql:
     image: mysql:8.0
     cap_add:
       - SYS_NICE
     restart: always
+    env_file:
+      - .env
     environment:
       - MYSQL_DATABASE=${DATABASE_NAME}
       - MYSQL_USERNAME=${DATABASE_USER}
@@ -29,8 +31,32 @@ services:
     ports:
       - ${DATABASE_PORT}:3306
     volumes:
-      - database_data:/var/lib/mysql
+      - database_mysql_data:/var/lib/mysql
+
+  database-postgres:
+    image: postgres:14.5
+    restart: always
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+    ports:
+      - ${DATABASE_PORT}:5432
+    volumes:
+      - database_postgres_data:/var/lib/postgresql/data   
+
+  adminer:
+    image: adminer:4.8.1
+    env_file:
+      - .env
+    ports:
+      - ${ADMINER_PORT}:8080
+    depends_on:
+      - database-${DATABASE}
 
 volumes:
-  database_data: {}
   node_modules: {}
+  database_mysql_data: {}  
+  database_postgres_data: {}
