--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,6 @@ PORT=3000
 #ADMINER
 ADMINER_PORT=8080
 
-
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -23,3 +22,5 @@ ADMINER_PORT=8080
 # Escolha o formato a depender do tipo de banco
 #DATABASE_URL="mysql://user:password@database-mysql:3306/bolsa"
 DATABASE_URL="postgresql://user:password@database-postgres:5432/bolsa?schema=public"
+
+JWT_SECRET=secretLOGIN
