--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^4.3.1",
     "@types/validator": "^13.7.7",
+    "aws-sdk": "^2.1230.0",
     "bcrypt": "^5.0.1",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
