--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.59",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
