Parametrizando e testando com send-in-blue.

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,10 @@ S3_SECRET_ACCESS_KEY='xxxxxxxxxxxxxxx'
 S3_BUCKET='xxxxxxx'
 S3_ACL='public-read'
 S3_URL='https://xxxxxxx.com'
+
+# Configurações de SMTP MAILER
+SMTP_HOST=smtp-relay.sendinblue.com
+SMTP_PORT=587
+SMTP_USER=matheuswcf@gmail.com
+SMTP_PASSWORD=
+SMTP_NOREPLY=matheuswcf@gmail.com
