Atualiza env sample.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# postgres|mysql
+# Deixe o valor postgres
 DATABASE=postgres
 
 DATABASE_PORT=5432
@@ -6,24 +6,16 @@ DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_NAME=bolsa
 
+#Preencha a string abaixo de acordo com os valores acima
+DATABASE_URL="postgresql://user:password@database-postgres:5432/bolsa?schema=public"
+
 # API
 PORT=3000
+JWT_SECRET=secretLOGIN
 
 #ADMINER
 ADMINER_PORT=8080
 
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# Escolha o formato a depender do tipo de banco
-#DATABASE_URL="mysql://user:password@database-mysql:3306/bolsa"
-DATABASE_URL="postgresql://user:password@database-postgres:5432/bolsa?schema=public"
-
-JWT_SECRET=secretLOGIN
 
 # Configurações para persistir documentos em S3 Bucket
 S3_ENDPOINT='xxxxx.com'
