fix: docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - .env
     volumes:
       - .:/usr/src/app
+      - ./usr/src/app/node_modules
     # Run a command against the development stage of the image
     command: npm run start:dev:migrate
     ports:
